Actualización de versión de Java 21 a Java 17 para Dockerización